<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="MAIN" Id="{dec5b1ca-8e16-4f49-8efb-57a750654862}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//IO.bOutput := HMI.bContactor;
HMI.iTemperatureDisplayValue := IO.iInput/10;
//Temperature Control state
IF HMI.bTemperatureControlSwitch = 1 THEN
	HMI.sTemperatureControlState := 'AUTO';
END_IF
IF HMI.bTemperatureControlSwitch = 0 THEN
	HMI.sTemperatureControlState := 'MAN';
END_IF
]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="2" Count="0" />
      <LineId Id="16" Count="1" />
      <LineId Id="6" Count="0" />
      <LineId Id="10" Count="1" />
      <LineId Id="21" Count="0" />
      <LineId Id="14" Count="1" />
      <LineId Id="12" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>